Renamed package to golbag

--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -2,14 +2,14 @@ FROM golang:alpine as builder
 
 RUN apk update && apk add ca-certificates && apk add make
 
-COPY . $GOPATH/src/github.com/inquizarus/boltdbsvc/
+COPY . $GOPATH/src/github.com/inquizarus/golbag/
 
-WORKDIR $GOPATH/src/github.com/inquizarus/boltdbsvc
+WORKDIR $GOPATH/src/github.com/inquizarus/golbag
 RUN CGO111MODULE=on make build-arm
-RUN mv boltdbsvc_arm /go/bin/boltdbsvc
+RUN mv golbag_arm /go/bin/golbag
 
 FROM arm32v7/busybox:latest
-COPY --from=builder /go/bin/boltdbsvc /go/bin/boltdbsvc
+COPY --from=builder /go/bin/golbag /go/bin/golbag
 COPY --from=builder /etc/ssl/certs /etc/ssl/certs
 WORKDIR /go/bin
-CMD ./boltdbsvc
+CMD ./golbag
